Update layout and content in logout.html

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,21 +1,24 @@
 {% extends "account/base.html" %}
-
+{% load static %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+<main>
+<a href="{% url 'home' %}"></a>
+<img id="logo" alt="NextBoat" src="{% static 'images/logo.svg' %}">
+<div class="form-cont">
+  <h1>Log out</h1>
+  <form method="post" action="{% url 'account_logout' %}">
+    {% csrf_token %}
+    Are you sure you want to log out?
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+    {% endif %}
+    <button type="submit">{% trans 'Log out' %}</button>
+    </form>
+</main>
 
 {% endblock %}
