--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     {% load humanize %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}"> </link>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://use.typekit.net/vrz6cku.css">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}">
     {% block head %}
     {% endblock %}
 </head>
@@ -21,7 +21,7 @@
             <a href="{% url 'listing_create' %}" id="sell-nav">Sell</a>
         </nav>
         <a href="{% url 'home' %}" id="logo-nav">
-            <image id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
+            <img id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
         </a>
         <div role="button" role="button" id="menu-button">
             <img id="menu-button-icon" alt="" src="{% static 'images/user_menu_icon_484848.svg' %}">
