--- a/listings/templates/listings/index.html
+++ b/listings/templates/listings/index.html
@@ -14,7 +14,7 @@
             <div>
                 <h1 id="hero-h1">Find your next boat</h1>
                 <div id="hero-text">Browse an extensive range of power & sailing boats</div>
-                <a href="{% url 'boat_listings' %}" id="hero-button"><div id="hero-button" role="button">For Sale</div></a>   
+                <a href="{% url 'boat_listings' %}" id="hero-button"><div>For Sale</div></a>   
             </div>
         </div>
     </div>
@@ -27,10 +27,10 @@
                 <li>Communicate with messages</li>
                 <li>Reach a new audience</li>
             </ul>
-            <a href="{% url 'listing_create' %}" id="hero-button"><div id="hero-button" role="button">Sell</div></a>  
+            <a href="{% url 'listing_create' %}" id="hero-button"><div>Sell</div></a>  
         </div>
         <div id="sell-left">
-            <img src="{% static 'images/sell.jpeg' %}">
+            <img alt="Sailing Boat" src="{% static 'images/sell.jpeg' %}">
         </div>
     </div>
 </main>
