Remove stray end tags from base.html index.html

--- a/listings/templates/listings/index.html
+++ b/listings/templates/listings/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/home.css' %}"> </link>
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
 <title>NextBoat - the best way to find your next boat | Buy & sell all kinds of boats</title>
 {% endblock %}
 {% block content %}
@@ -14,7 +14,7 @@
             <div>
                 <h1 id="hero-h1">Find your next boat</h1>
                 <div id="hero-text">Browse an extensive range of power & sailing boats</div>
-                <a href="{% url 'boat_listings' %}" id="hero-button"><div>For Sale</div></a>   
+                <a href="{% url 'boat_listings' %}" class="hero-button"><div>For Sale</div></a>   
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
                 <li>Communicate with messages</li>
                 <li>Reach a new audience</li>
             </ul>
-            <a href="{% url 'listing_create' %}" id="hero-button"><div>Sell</div></a>  
+            <a href="{% url 'listing_create' %}" class="hero-button"><div>Sell</div></a>  
         </div>
         <div id="sell-left">
             <img alt="Sailing Boat" src="{% static 'images/sell.jpeg' %}">
