--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         <a href="{% url 'home' %}" id="logo-nav">
             <img id="nav-logo" src="{% static 'images/logo.svg' %}" alt="Next Boat Logo">
         </a>
-        <div role="button" role="button" id="menu-button">
+        <div role="button" id="menu-button">
             <img id="menu-button-icon" alt="" src="{% static 'images/user_menu_icon_484848.svg' %}">
             <img id="menu-button-icon-close" alt="" src="{% static 'images/menu_close_icon_484848.svg' %}">
         </div>
