Remove stray end tag from listings.html

--- a/listings/templates/listings/listings.html
+++ b/listings/templates/listings/listings.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/listings.css' %}"> </link>
+<link rel="stylesheet" href="{% static 'css/listings.css' %}"> 
 <title>Explore power and sail boats for sale | NextBoat</title>
 {% endblock %}
 {% block content %}
