--- a/listings/templates/listings/index.html
+++ b/listings/templates/listings/index.html
@@ -6,6 +6,7 @@
 {% endblock %}
 {% block content %}
 <main>
+    <!-- Hero section of home page, on mobile devices elements are stacked rather than side by side.-->
     <div id="hero-flex">
         <div id="hero-left">
             <img src="{% static 'images/home_hero.jpeg' %}" alt="Boat">
@@ -14,7 +15,8 @@
             <div>
                 <h1 id="hero-h1">Find your next boat</h1>
                 <div id="hero-text">Browse an extensive range of power & sailing boats</div>
-                <a href="{% url 'boat_listings' %}" class="hero-button"><div>For Sale</div></a>   
+                <!-- Button to go to listings page, showing boats for sale-->
+                <a href="{% url 'boat_listings' %}" class="hero-button"><div class="hero-button-div">For Sale</div></a>   
             </div>
         </div>
     </div>
@@ -22,12 +24,14 @@
         <div id="sell-right">
             <h2>Sell your boat the easy way</h2>
             <span>NextBoat makes it easy for you to connect with boat buyers</span>
+            <!--Features of selling on NextBoat-->
             <ul>
                 <li>It's free to list your boat</li>
                 <li>Communicate with messages</li>
                 <li>Reach a new audience</li>
             </ul>
-            <a href="{% url 'listing_create' %}" class="hero-button"><div>Sell</div></a>  
+            <!-- Button to go to create listing page, if user is not logged in they are taken to sign in page first.-->
+            <a href="{% url 'listing_create' %}" class="hero-button"><div class="hero-button-div">Sell</div></a>  
         </div>
         <div id="sell-left">
             <img alt="Sailing Boat" src="{% static 'images/sell.jpeg' %}">
