--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/account.css' %}"> </link>
+    <link rel="stylesheet" href="{% static 'css/account.css' %}">
     <link rel="stylesheet" href="https://use.typekit.net/vrz6cku.css">
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}"/>
     <title>{% block head_title %}{% endblock %}</title>
