Add extra code comments to favourite templates

--- a/favourites/templates/favourites/favourite_toggle.html
+++ b/favourites/templates/favourites/favourite_toggle.html
@@ -1,1 +1,1 @@
-.
+<!-- This template is deliberately blank as the user will never sees it. It is used to toggle whether a listing has been added as a favourite -->
