--- a/favourites/templates/favourites/favourite_delete.html
+++ b/favourites/templates/favourites/favourite_delete.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> </link>
+<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> 
 <title>Delete favourite for {{ object.get_make_display }} {{ object.model }} - NextBoat</title>
 {% endblock %}
 {% block content %}
 <main>
+    {# Checks whether the user who is logged in is the same who created the favourite that could be deleted#}
     {% if object.favourite_created_by|stringformat:"s" == user.username %}
     <h1>Delete Favourite</h1>
     <img id="delete-img" alt="Warning" src="{% static 'images/question-icon.svg' %}">
     <div id="warning-text">
+        <!-- Confirmign whether the user wishes to proceed with the action-->
         Are you sure you want to remove the favourite for {{ object.listing.get_make_display }} {{ object.listing.model }}?
         <form method="post" action="">
             {% csrf_token %}
@@ -19,6 +21,7 @@
             </a>
         </form>
     </div>
+    {# This section is displayed if another user who didn't create the favourite object tries to view this delete page #}
     {% else %}
         <div id="del-no-permission">
 
