--- a/listings/templates/listings/delete_image.html
+++ b/listings/templates/listings/delete_image.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> </link>
+<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> 
 <title>Delete Image - NextBoat</title>
 {% endblock %}
 {% block content %}
