--- a/listings/templates/listings/listing_delete.html
+++ b/listings/templates/listings/listing_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> </link>
+<link rel="stylesheet" href="{% static 'css/delete_listing.css' %}"> 
 <title>Delete the listing for your {{ object.get_make_display }} {{ object.model }} - NextBoat</title>
 {% endblock %}
 {% block content %}
@@ -21,6 +21,7 @@
         </form>
     </div>
     {% else %}
+    {# Displayed if user who the listing doesn't belong to tries to access this functionality #}
         <div id="del-no-permission">
 
             <span>You do not have permission.</span>
