--- a/listings/templates/listings/my_listings.html
+++ b/listings/templates/listings/my_listings.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         {% endfor %}
-        {% If there are not listings, ask if user wants to create a new one %} 
+        {# If there are not listings, ask if user wants to create a new one #} 
         <div id="my-new-listing-text">Want to create a new listing?</div>
         {% else %}
         <div id="no-listings-cont">
