Replace button with div in listing_delete.html

--- a/listings/templates/listings/listing_delete.html
+++ b/listings/templates/listings/listing_delete.html
@@ -16,7 +16,7 @@
             {% csrf_token %}
             <input type="submit" value="Yes" class="delete-button">
             <a id="cancel-a" href="{% url 'my_listings' %}">
-                <button class="cancel-button" id="cancel-button">Cancel</button>
+                <div class="cancel-button" id="cancel-button">Cancel</div>
             </a>
         </form>
     </div>
